--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.4",
+    "@angular-devkit/build-angular": "^13.2.5",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
@@ -37,6 +36,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tslib": "^2.3.1",
     "typescript": "~4.5.2"
   }
 }
