--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~7.4.0",
     "zone.js": "~0.11.4"
