--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "typescript": "~4.5.2"
   },
   "engines": {
-    "node": "12.18.2",
-    "npm": "6.14.5"
+    "node": "^12.11.1",
+    "npm": "^6.11.0"
   }
 }
