--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "typescript": "~4.5.2"
   },
   "engines": {
-    "node": "^12.11.1",
-    "npm": "^6.11.0"
+    "node": "16.13.1",
+    "npm": "8.3.0"
   }
 }
