--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
     "typescript": "~4.5.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "node": "16.x"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.5",
