--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "ngx-pagination": "^5.1.1",
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
-    "typescript": "~4.5.2",
-    "zone.js": "~0.11.4"
-  },
+    "typescript": "~4.5.2"
+    },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.5",
     "@angular/cli": "^13.3.1",
