--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
     "typescript": "~4.5.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@types/node": "^17.0.23"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.2",
@@ -50,7 +51,7 @@
     "typescript": "~4.5.2"
   },
   "engines": {
-    "node": "v16.13.1",
-    "npm": "8.3.0"
+    "node": "16.x",
+    "npm": "8.x"
   }
 }
