--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "ng build --prod"
+    "heroku-postbuild": "ng build --prod",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
+    "@angular/compiler-cli": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/localize": "~13.1.0",
@@ -30,7 +32,11 @@
     "ngx-pagination": "^5.1.1",
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
+    "typescript": "~4.5.2",
     "zone.js": "~0.11.4",
+    "@types/node": "^17.0.23"
+  },
+  "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.2",
     "@angular/cli": "^13.3.2",
     "@angular/compiler-cli": "~13.1.0",
